# SDL_trial

./: CMakeLists.txt
modules/SDL2_image-2.8.2/cmake/: sdl2_image-config.cmake
src/: main.cpp
